--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,8 @@
         android:layout_width="176dp"
         android:layout_height="49dp"
         android:layout_marginTop="168dp"
-        android:onClick="Ganesh"
-        android:text="click second activity"
+        android:onClick="login"
+        android:text="login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
