--- a/app/src/main/res/layout-v23/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout-v23/activity_sign_up_screen.xml
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/usernameField"
         android:layout_width="220dp"
         android:layout_height="54dp"
         android:layout_marginTop="67dp"
@@ -68,7 +68,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/usernameField" />
 
     <Button
         android:id="@+id/button2"
