--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -13,12 +13,12 @@
         android:layout_marginTop="72dp"
         android:fontFamily="sans-serif-thin"
         android:lineSpacingExtra="8sp"
-        android:text="Welcome {Name}, how are you?"
+        android:text="Welcome, how are you doing?"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#130F0F"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
