--- a/app/src/main/res/layout/activity_mood_history.xml
+++ b/app/src/main/res/layout/activity_mood_history.xml
@@ -47,4 +47,16 @@
         </LinearLayout>
     </ScrollView>
 
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="11dp"
+        android:onClick="goBack"
+        android:text="@string/back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
